test/src/e2e_vm_tests/test_programs/should_fail/generic_empty_struct_with_constraint/src/main.sw
library;

trait Trait {}

// Does NOT have a Trait trait implementation
pub struct NoTraitStruct {}

// Where clause on empty struct
pub struct GenericEmptyStruct<T> where T: Trait {}

pub fn main() {
    // Does not compile as expected
    let _: GenericEmptyStruct<NoTraitStruct> = GenericEmptyStruct {};
}